# gestor-de-tareas-maja-7-05-26

./: README.md
proytectote/: README.md  app.py  formulario.html  gestor_de_tareas.html  inicio.html  inicio_de_sesion.html  pyproject.toml  recuperar_contraseña.html  requirements.txt
